@@ -14,6 +14,7 @@ Bugfixes:
 Misc:
  - All: Only update version info if needed
  - FFmpeg: Encoding cleanup
+ - GB Memory: Initialize RAM pattern for GBC
 
 0.5.0: (2016-09-19)
 Features:
